k8s/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: spring-boot-data-jpa-mysql
  labels:
    app: spring-boot-data-jpa-mysql
spec:
  selector:
    app: spring-boot-data-jpa-mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: spring-boot-data-jpa-mysql
    spec:
      containers:
        - name: spring-boot-data-jpa-mysql
          image: image-registry.openshift-image-registry.svc:5000/pipelines-tutorial/spring-boot-data-jpa-mysql:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 10000
              protocol: TCP
  triggers:
  - type: ConfigChange 
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot-data-jpa-mysql
      from:
        kind: ImageStreamTag
        name: spring-boot-data-jpa-mysql:latest
    type: ImageChange
