k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: spring-boot-data-jpa-mysql
  name: spring-boot-data-jpa-mysql
spec:
  port:
    targetPort: 10000-tcp
  to:
    kind: Service
    name: spring-boot-data-jpa-mysql
    weight: 100
